[package]
name = "bio-anno-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.3"
approx = "0.5.1"
ndarray = "0.15.6"
